[package]
name = "final-frontier"
version = "0.1.0"
authors = ["Jovan Gerodetti <jovan.gerodetti@titannano.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "^0.53.1"
cc = "^1.0.50"
