[package]
name = "final-frontier"
version = "0.1.0"
authors = ["Jovan Gerodetti <jovan.gerodetti@titannano.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "^0.33"
lewton = "0.10.1"
rand = "0.7.3"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "^0.53.1"
cc = "^1.0.50"
